--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; 2025 - Company Vehicles</p>
+        <p>&copy; 2025 - Kafka Messaging</p>
     </footer>
 </div>
 
